Add non-secure token cookie support and fix cross platform copy command
